<resources>
    <string name="app_name">TestAuxiliaryTool</string>
    <string name="autotesttext">Auto Test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_function_selection">FunctionSelectionActivity</string>
    <string name="autosleepwake">Auto Sleep Wake</string>
    <string name="batterymonitor">Battery Monitor</string>
    <string name="tptest">TP Test</string>
    <string name="camera_test">Camera Test</string>
    <string name="tp_module_name">TPTest</string>
    <string name="start_record">点击开始录屏</string>
    <string name="stop_record">点击停止录屏</string>
    <string name="title_record">录屏</string>
    <string name="titil_allow_perm">权限许可</string>
    <string name="text_allow_perm">为了能使用录屏功能，请许可以下权限:\n读写权限、录音权限、录屏权限和浮窗权限</string>
    <string name="ok">好</string>
    <string name="comfirm">确定</string>
    <string name="cancel">取消</string>
    <string name="refetch">重新获取</string>
    <string name="screen_record">录屏</string>
    <string name="get_size_and_rate">获取尺寸与分辨率</string>
    <string name="title_size_fragment">尺寸与分辨率</string>
    <string name="calc_distance">测两指间距</string>
    <string name="width">widthPixels</string>
    <string name="height">heightPixels</string>
    <string name="dpi">dpi</string>
    <string name="xdpi">xdpi</string>
    <string name="ydpi">ydpi</string>
    <string name="density">density</string>
    <string name="real_width">real_width</string>
    <string name="real_height">real_height</string>
    <string name="input_screen_height">请输入屏幕高度(mm)</string>
    <string name="input_screen_width">请输入屏幕宽度(mm)</string>
    <string name="record_files_manager">录屏文件管理</string>
    <string name="clear_record_dir">清理录屏目录</string>
    <string name="start_record_main">录屏</string>
    <string name="stop_record_main">停止</string>
    <string name="start_distance_detail">空白测距页</string>
    <string name="start_record_detail">录屏详细页</string>
    <string name="start_size_detail">屏幕尺寸页</string>
    <string name="calc_ime_distance">输入法测距页</string>
    <string name="test_imput_ime">测试输入</string>
    <string name="ime_complete">完成</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="record">录屏</string>
    <string name="titile_calc_distance">空白测距</string>
    <string name="title_calc_ime_distance">IME测距</string>
    <string name="all_perms_granted">已经授权所有权限</string>
    <string name="deny_perms_request_warn">you denied the request,recorder won\'t work</string>
    <string name="unsupport_screen_record">Android版本小于5.0，暂不支持录屏!</string>
    <string name="record_time">录屏时间:</string>
    <string name="input_screen_size">请输入屏幕宽高尺寸</string>
    <string name="input_success">输入完成</string>
    <string name="clear_all_videos">是否要清除所有本地录屏视频?</string>
    <string name="warnings">警告!</string>
    <string name="try_later">正在录屏，请稍后再试!</string>
    <string name="clear_videos_failed">清理失败!</string>
    <string name="clear_videos_successful">清理成功!</string>
    <string name="stop_recording">停止录屏</string>
    <string name="notice">注意:实际尺寸仅供参考!</string>
    <string name="tv_video_name">this is name</string>
    <string name="tv_video_time">this is time</string>
    <string name="tv_video_size">this is size</string>
    <string name="shift_layout">切换布局</string>
    <string name="lineation_page">划线测试页</string>
    <string name="no_files">当前无录屏文件</string>
    <string name="granted_alert_window_perm">浮窗权限许可成功!</string>
    <string name="denied_alert_window_perm">浮窗权限许可失败,浮窗功能将受影响!</string>
    <string name="record_audio_permission">录音权限</string>
    <string name="read_write_permission">读写权限</string>
    <string name="TP_FILE_PROVIDER_AUTHORITIES">com.ckt.testauxiliarytool.tp.fileprovider</string>
    <string name="sensor_g_sensor">G-Sensor 测试</string>
    <string name="sensor_gyroscope">Gyroscope 测试</string>
    <string name="sensor_p_sensor">P-Sensor 测试</string>
    <string name="sensor_l_sensor">L-Sensor 测试</string>
    <string name="sensor_h_sensor">Hall-Sensor 测试</string>
    <string name="sensor_m_sensor">M-Sensor 测试</string>
    <string name="mSensor">指南针</string>
    <string name="mSensor_deviation">误差值</string>
    <string name="accuracy_compass">lv= %d</string>
    <string name="calibrate_compass">请校准指南针！</string>
    <string name="calibrate_success">校准成功</string>
    <string name="max_deviation_angle">最大偏差角度：</string>
    <string name="reference_angle">参考角度：</string>
    <string name="default_angle">5°</string>
    <string name="hSensor">霍尔传感器</string>
    <string name="hSensor_interval">最大响应时间</string>
    <string name="hSensor_open_interval_tip">最大开盖响应时间(ms)</string>
    <string name="hSensor_close_interval_tip">最大合盖响应时间(ms)</string>
    <string name="ap_sure">确定</string>
    <string name="action_delete">清空数据</string>
    <string name="action_edit">自定义最大响应时间</string>
    <string name="action_excel">导出excel表格</string>
    <string name="gsensor_name">横竖屏切换</string>
    <string name="album_text">相册横竖屏切换</string>
    <string name="play_text">播放器横竖屏切换</string>
    <string name="browser_text">浏览器横竖屏切换</string>
    <string name="start_text">开始</string>
    <string name="end_text">结束</string>
    <string name="save_text">保存到Excel</string>
    <string name="question">请选择要测试的次数：</string>
    <string name="browser_go">Go</string>
    <string name="gyroscope">陀螺仪</string>
    <string name="response_time">陀螺仪响应时间</string>
    <string name="response_x_time">X—轴响应时间</string>
    <string name="response_y_time">Y—轴响应时间</string>
    <string name="response_z_time">Z—轴响应时间</string>
    <string name="forx_button">X轴的响应时间</string>
    <string name="fory_button">Y轴的响应时间</string>
    <string name="forz_button">Z轴的响应时间</string>
    <string name="save_btn">保存数据</string>
    <string name="for_result_button">获取结果</string>
    <string name="gyroscope_tips">需要测试的轴（正方向旋转一周360)</string>
    <string name="gyroscope_check">请选择需要测试的轴</string>
    <string name="gyroscope_angle">当前已旋转角度：%f</string>
    <string name="gyroscope_x">X-轴</string>
    <string name="gyroscope_y">Y-轴</string>
    <string name="gyroscope_z">Z-轴</string>
    <string name="gyroscope_end">End</string>
    <string name="gyroscope_start">Start</string>
    <string name="lSensor">L-Sensor测试</string>
    <string name="pSensor">P-Sensor测试</string>
    <string name="proximity_str">传感器值：%.1f</string>
    <string name="btn_start_label">开始测试</string>
    <string name="btn_stop_label">结束测试</string>
    <string name="p_table_raw1">次数</string>
    <string name="p_table_raw2">灭屏时间(ms)</string>
    <string name="p_table_raw3">亮屏时间(ms)</string>
    <string name="btn_get_records_label">获取记录</string>
    <string name="btn_clear_label">清除记录</string>
    <string name="p_average_time">平均灭屏时间：\n%1$.2fms\n平均亮屏时间：\n%2$.2fms</string>
    <string name="save_excel_label">导出EXCEL</string>
    <string name="show_lux">光照强度：%.1f lx</string>
    <string name="brightness">当前亮度：%d</string>
    <string name="l_average_time">平均时间：\n%.3fs</string>
    <string name="rb_dark_label">暗</string>
    <string name="rb_light_label">亮</string>
    <string name="l_table_raw2">测试项</string>
    <string name="l_table_raw3">光照强度</string>
    <string name="l_table_raw4">变化范围</string>
    <string name="l_table_row5">时间</string>
    <string name="tv_lux_label">光照强度：10 lx</string>
    <string name="tv_average_label">平均时间：</string>
    <string name="tv_brightness_label">当前亮度：108</string>
    <string name="test_count">测试次数：</string>
    <string name="hint_count_text">请输入测试次数</string>
    <string name="test_time">时间间隔：</string>
    <string name="hint_time_text">请输入时间间隔(秒)</string>
    <string name="btn_start_text">开始测试</string>
    <string name="btn_stop_text">停止测试</string>
    <string name="btn_show_result_text">查看日志</string>
    <string name="btn_clear_log_text">清空日志</string>
    <string name="dialog_setting_title">提示</string>
    <string name="dialog_input_error_message">时间间隔和测试次数不能为空且测试次数和时间不能为0！</string>
    <string name="dialog_pos_text">确定</string>
    <string name="dialog_setting_pos_btn_text">去设置</string>
    <string name="dialog_setting_neg_btn_text">取消</string>
    <string name="dialog_setting_neg_btn_text_not">不用啦</string>
    <string name="dialog_sleep_setting_message">请设置手机休眠(sleep)时间为\n30 minutes，确保测试的正常！</string>
    <string name="dialog_screen_lock_method_message">为了测试的准确进行，请确保当前手机的屏幕锁定方式(Screen Lock)为无(None)！</string>
    <string name="dialog_restart_is_not_use_message">当前为三方应用，重启功能目前无法实现(权限问题)，敬请关注后期更新！</string>
    <string name="dialog_version_error_message">重启测试要求Android版本至少为7.0！</string>
    <string name="dialog_delete_log_message">你确定要删除所有日志信息吗？</string>
    <string name="dialog_not_log_show_message">目前没有日志信息，先跑个测试吧！</string>
    <string name="btn_text_start_monitor">开启监测服务</string>
    <string name="btn_text_stop_monitor">停止监测服务</string>
    <string name="btn_text_look_data">查看历史记录</string>
    <string name="btn_text_export_excel">导出Excel</string>
    <string name="btn_text_look_chart">电量消耗曲线</string>
    <string name="btn_text_clear_data">清空历史记录</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_positive_btn_text">确定</string>
    <string name="dialog_negative_btn_text">取消</string>
    <string name="dialog_not_data_service_is_start_message">当前没有任何的数据，先开启监测服务吧！</string>
    <string name="dialog_not_data_service_not_start_message">当前电量数据未变化，请耐心等待数据更新！</string>
    <string name="dialog_clear_data_message">确定要清空所有数据吗？</string>
    <string name="dialog_progress_message">正在导出表格，请耐心等待！</string>
    <string name="menu_item_save">保存图表</string>
    <string name="BatteryMonitorPage">BatteryMonitor</string>
    <string name="contentfill">ContentFill</string>
    <string name="ram_fill_title">Fill RAM Memory</string>
    <string name="rom_fill_title">Fill ROM/SDCard Memory</string>
    <string name="Sms_fill_title">Fill Sms</string>
    <string name="call_log_fill_title">Fill CallLog</string>
    <string name="contact_fill_title">Fill Contact</string>
    <string name="ram_fill_button">RAM填充</string>
    <string name="rom_fill_button">ROM/SDCard填充</string>
    <string name="sms_fill_button">短信填充</string>
    <string name="contact_fill_button">联系人填充</string>
    <string name="call_log_fill_button">通话记录填充</string>
    <string name="fill_size_name">大小(M)：</string>
    <string name="edit_memory_size_name">请输入要填充内存大小(M)</string>
    <string name="fill_ram">填充RAM</string>
    <string name="release_ram">释放RAM</string>
    <string name="update_ram">当前RAM</string>
    <string name="fill_rom">填充ROM</string>
    <string name="release_rom">释放ROM</string>
    <string name="fill_sdcard">填充SDCard</string>
    <string name="release_sdcard">释放SDCard</string>
    <string name="edit_sms_size">请输入填充短信的数量</string>
    <string name="fill_sms">填充短信</string>
    <string name="release_sms">删除所有短信</string>
    <string name="calllog_num_edit_text">请输入填充通话记录的数量</string>
    <string name="calllog_num_text_view">通话记录条数</string>
    <string name="addcalllog">填充通话记录</string>
    <string name="deletecalllog">清空通话记录</string>
    <string name="add_contact_num_edit_text">请输入填充联系人的数量</string>
    <string name="local_contacts_num_text_view">当前本地联系人数</string>
    <string name="sim_contacts_num_text_view">当前SIM卡联系人数</string>
    <string name="add_local_contact">填充到本地</string>
    <string name="add_sim_contact">填充到SIM卡</string>
    <string name="delete_local_contact">清空本地联系人</string>
    <string name="delete_sim_contact">清空SIM卡联系人</string>
    <string name="autophone">Auto Phone</string>
    <string name="ap_phoneNo">电话号码:</string>
    <string name="ap_input_phoneNo">请输入电话号码</string>
    <string name="ap_space_time">拨号间隔(s):</string>
    <string name="ap_input_space_time">请输入拨号间隔时间(s)</string>
    <string name="ap_call_duration">通话时间(s):</string>
    <string name="ap_input_call_duration">请输入通话持续时间(s)</string>
    <string name="ap_input_call_times">请输入拨号的次数</string>
    <string name="ap_sleep_time">休眠时间(s):</string>
    <string name="ap_call_times">拨号次数:</string>
    <string name="ap_input_sleep_time">请输入休眠时间</string>
</resources>