<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_start_monitor"
            style="@style/ButtonStyleForBatteryMonitor"
            android:text="@string/btn_text_start_monitor"/>

        <Button
            android:id="@+id/btn_stop_monitor"
            style="@style/ButtonStyleForBatteryMonitor"
            android:text="@string/btn_text_stop_monitor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/btn_look_data"
            style="@style/ButtonStyleForBatteryMonitor"
            android:text="@string/btn_text_look_data"/>

        <Button
            android:id="@+id/btn_export_excel"
            style="@style/ButtonStyleForBatteryMonitor"
            android:text="@string/btn_text_export_excel"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/btn_look_chart"
            style="@style/ButtonStyleForBatteryMonitor"
            android:text="@string/btn_text_look_chart"/>

        <Button
            android:id="@+id/btn_clear_data"
            style="@style/ButtonStyleForBatteryMonitor"
            android:text="@string/btn_text_clear_data"/>

    </LinearLayout>

</LinearLayout>