<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.ckt.testauxiliarytool.tp.fragments.SizeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_tv_width_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/width"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/id_tv_height_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/height"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/id_tv_xdpi_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/xdpi"
                android:textSize="20sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/id_tv_ydpi_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ydpi"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/id_tv_density_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/density"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/id_tv_real_width_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/real_width"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/id_tv_real_height_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/real_height"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/id_tv_dpi_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/dpi"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/id_tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/notice"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <Button
        android:id="@+id/id_btn_refetch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:onClick="refetchSize"
        android:text="@string/refetch" />
</LinearLayout>
