<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/gyroscope_tips" />

    <RadioGroup
        android:id="@+id/rg_gyroscope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/xAxis"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/xAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gyroscope_x" />

        <RadioButton
            android:id="@+id/yAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gyroscope_y" />

        <RadioButton
            android:id="@+id/zAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gyroscope_z" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_start"
        style="@style/ButtonStyle"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/gyroscope_check" />

    <TextView
        android:id="@+id/tv_tips"
        style="@style/TextViewStyle"
        android:textSize="14sp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_result"
            style="@style/ButtonStyle"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/for_result_button"
            android:textSize="14sp" />

        <Button

            android:id="@+id/btn_save"
            style="@style/ButtonStyle"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save_btn"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/ButtonStyle"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btn_clear_label"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
