<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_lux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="18sp"
        tools:text="@string/tv_lux_label" />

    <TextView
        android:id="@+id/tv_average"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/tv_lux"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        tools:text="@string/tv_average_label" />

    <TextView
        android:id="@+id/tv_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lux"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        tools:text="@string/tv_brightness_label" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_brightness"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rb_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb_dark_label" />

        <RadioButton
            android:id="@+id/rb_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/rb_light_label" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_start"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/radioGroup"
        android:layout_margin="5dp"
        android:text="@string/btn_start_label" />

    <Button
        android:id="@+id/btn_stop"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/btn_start"
        android:layout_margin="5dp"
        android:layout_marginTop="6dp"
        android:text="@string/btn_stop_label" />

    <Button
        android:id="@+id/btn_clear"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/btn_stop"
        android:text="@string/btn_clear_label" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@id/btn_stop"
        android:layout_marginTop="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/records_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/p_table_raw1" />

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/l_table_raw2" />

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/l_table_raw3" />

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/l_table_raw4" />

        <View
            android:layout_width="0.1dip"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/l_table_row5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@id/records_header"
        android:background="@android:color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/records_header" />

</RelativeLayout>